Enable ARM NEON in Blink if compiling with Clang

Clang declares itself as GCC 4.2.1, which fails a GCC_VERSION test in wtf/CPU.h
and consequently disables NEON code in Blink.

BUG=673067

Change-Id: I1e7a28996ab4d016cbc3039556384f00fb3e7034
Review-Url: https://codereview.chromium.org/2569383002
Cr-Commit-Position: refs/heads/master@{#439903}

Former-commit-id: 6a66b7eda01fb58b0393ecd4f8086ebab0f25e5a